Set correct file timestamp on streaming file copy.

Today, on streaming file copy, the destination file is closed on the
destruction of SnapshotCopyOrMoveImpl which happens after setting the
timestamp of the file with TouchFile(). This works in an undesired way
with some file systems which update timestamps on file close (including
Drive): the timestamp set with TouchFile() is reverted immediately.

This change updates SnapshotCopyOrMoveImpl to destruct StreamCopyHelper
immediately after it is used so that the destination file is closed
before TouchFile() is called.

Bug: 770012
Test: Copying a file from Downloads to Drive retains its timestamp.
Change-Id: I4a430a347e3d8d524c8b8d00bfe9479e22f7d5c9
Reviewed-on: https://chromium-review.googlesource.com/765748
Reviewed-by: Taiju Tsuiki <tzik@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516191}
Former-commit-id: 23c7a54d77b7efe746f355732df9d0fab64a069c